--- a/music/.settings/org.eclipse.wst.common.component
+++ b/music/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,7 @@
     <wb-module deploy-name="music">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="music"/>
         <property name="java-output-path" value="/music/build/classes"/>
+        <property name="context-root" value="/music"/>
     </wb-module>
 </project-modules>
